[package]
name = "deb-control-codec"
categories = [ "parser-implementations" ]
description = "Zero-copy parser & streaming futures codec for Debian control files"
edition = "2024"
keywords = [ "debian", "control" ]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/pop-os/deb-control"
version = "1.0.1"

[dependencies]
asynchronous-codec = "0.7.0"
bytes = "1.11.1"
memchr = "2"

[dev-dependencies]
async-std = "1"
fomat-macros = "0.3"
futures = "0.3"
